# NumericalMethods2

./: .gitignore  CMakeLists.txt  README  gauss-seidel.cpp  gauss-seidel.h  jacobi.cpp  jacobi.h  linearSolver.cpp  linearSolver.h  main.cpp  sor.cpp  sor.h  steepest-descent.cpp  steepest-descent.h
prac1/: CMakeLists.txt  jacobi.cpp  linearSolver.cpp  steepest-descent.cpp
prac2/: .gitignore  CMakeLists.txt  curve-ex12.cpp  curve-ex12.h  function-ex12.cpp  function-ex12.h  main.cpp  results.txt
